# organelle-mapping

./: .gitignore  LICENSE  LICENSE.txt  README.md  all_data.yaml  copy_brain.sh  copy_culture.sh  copy_tissue.sh  data_8nm.yaml  data_8nm_org+mem.yaml  fly_organelles.yml  funky_offsets.yaml  label.yaml  minimal_fly_organelles.yml  pyproject.toml  run_a100.sh  selected_data 4nm.yaml  selected_data.yaml  selected_data_8nm.yaml  selected_data_8nm_mem+org.yaml  submit_a100.sh  vetted.yaml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  setup-pixi-envs.sh
example_configs/: architecture.yaml  augmentations.yaml  eval.yaml  finetuning.yaml  inference.yaml  label.yaml  run.yaml  tems_unet.yaml  traindata_8nm_org+mem.yaml  valdata_8nm_org+mem.yaml
notebooks/: add_name_attribute.ipynb  all_the_data.ipynb  check_instance_unknown.ipynb  check_vetted.ipynb  crop_offset_issue  debug_training.ipynb  explore_data.ipynb  fix_complement_counts.ipynb  fix_offset.ipynb  get_contrast.ipynb  label_manipulation.ipynb  make_membrane.ipynb  organelle_summary.ipynb  reset_multiscale.ipynb  shenanigans.ipynb  torchbullshit.ipynb  visualize_histograms.ipynb
scripts/: check_crop_intensity_ranges.py  compute_gt_voxel_counts.py  neuroglancer_viewer.py  peek.py  plot_eval_db.py  rechunk_snapshots.py  save_finetuning_crop.py
shaders/: README.md  lsd_rgb_viewer.glsl
src/fly_organelles/: __init__.py  data.py  data_preparation.py  inference.py  label_preparation.py  model.py  omero_utils.py  random_data.py  run.py  single_block_inference.py  train.py  utils.py  view_snapshots.py
src/fly_organelles/lsds/: aff_utils.py  gp_node.py  lsd_utils.py
src/fly_organelles/validate/: score.py
src/fly_organelles/yaml_utils/: yaml_generation.py
src/organelle_mapping/: __about__.py  __init__.py  checkpoint_edit.py  data.py  data_preparation.py  database.py  evaluation.py  inference.py  loss.py  metrics.py  model.py  neuroglancer_state.py  postprocessing.py  query.py  run.py  single_block_inference.py  sync_db.py  train.py  utils.py  view_snapshots.py
src/organelle_mapping/config/: __init__.py  augmentations.py  checkpoint_edit.py  data.py  evaluation.py  inference.py  models.py  run.py  target.py  transform.py  utils.py
tests/: __init__.py  test_data_src.py  test_database.py  test_lsd_config.py  test_query.py
